--- a/frontend/csyllabus/src/app/components/about/about.component.html
+++ b/frontend/csyllabus/src/app/components/about/about.component.html
@@ -212,7 +212,7 @@
                 <div class="col-12 col-md-3 col-lg-3">
                     <div class="single-cool-fact d-flex justify-content-center wow fadeInUp" data-wow-delay="0.8s">
                         <div class="counter-area">
-                            <h3><span class="counter">1890</span></h3>
+                            <h3><span class="counter">1000+</span></h3>
                         </div>
                         <div class="cool-facts-content">
                             <i class="ion-ios-star-outline"></i>
