--- a/frontend/csyllabus/src/app/core/core.component.html
+++ b/frontend/csyllabus/src/app/core/core.component.html
@@ -1,5 +1,5 @@
 
-    <section id="landing-page">
+    <section id="landing-page" style="height: calc(100vh - 56px)">
         <div class="title-subtitle-div" >
            <!--<div  style="box-shadow:inset 0 0 0 1000px rgba(0,0,0,0.3); padding:5%;  margin:auto;">-->
           <div class="animatedLeft fadeInLeft" >
