--- a/frontend/admin/src/app/login/login.component.html
+++ b/frontend/admin/src/app/login/login.component.html
@@ -2,13 +2,13 @@
   <div class="inner-login-container">
     <mat-card class="login-card">
       <mat-card-title class="login-title">CSyllabus Admin Login</mat-card-title>
-      <mat-card-content>
+      <mat-card-content (keyup.enter) = "submitLogIn()">
         <mat-form-field>
-          <input matInput placeholder="Username" [(ngModel)]="username">
+          <input matInput placeholder="Username" [(ngModel)]="username" required>
         </mat-form-field>
         <br>
         <mat-form-field>
-          <input matInput placeholder="Password" [type]="!hide ? 'password' : 'text'" [(ngModel)]="password">
+          <input matInput placeholder="Password" [type]="!hide ? 'password' : 'text'" [(ngModel)]="password" required>
           <mat-icon matSuffix (click)="hide = !hide">{{!hide ? 'visibility' : 'visibility_off'}}</mat-icon>
         </mat-form-field>
       </mat-card-content>
