--- a/frontend/csyllabus/src/app/components/course/course.component.html
+++ b/frontend/csyllabus/src/app/components/course/course.component.html
@@ -66,7 +66,7 @@ margin-right: auto; "></mat-spinner>
 
         </div>
         <div class="col-md-12">
-          <app-social [courseId]=course.id></app-social>
+          <app-social [courseId]=course.id [title]=course.name [university]=course.university [description]=course.description> </app-social>
         </div>
 
       </div>
