--- a/frontend/csyllabus/src/app/core/comparator/comparator.component.html
+++ b/frontend/csyllabus/src/app/core/comparator/comparator.component.html
@@ -1,7 +1,8 @@
-<form (keyup.enter)="compareCourses()" style="position: relative; overflow: auto;">
+<form style="position: relative; overflow: auto;">
   <div>
     <p class="custom-card-title">Compare courses using
-      <a  href="https://en.wikipedia.org/wiki/Latent_semantic_analysis" target="_blank" style="color: white; ">latent semantic indexing</a>
+      <a href="https://en.wikipedia.org/wiki/Latent_semantic_analysis" target="_blank" style="color: white; ">latent
+        semantic indexing</a>
     </p>
     <div class="col-md-12" style="background-color: #fffffffa;text-align: left; position: relative; padding: 20px;">
 
@@ -10,10 +11,12 @@
           <mat-select required placeholder="Select courses from" [formControl]="pokemonControl">
             <mat-optgroup *ngFor="let country of countries" [label]="country.name">
               <mat-option *ngFor="let university of country.universities" [value]="university"
+                          (onSelectionChange)="queryHomeCountry=country; queryHomeUniversity = university; filterCoursesByHomeUniversity()"
                           (click)="queryHomeCountry=country; queryHomeUniversity = university; filterCoursesByHomeUniversity()">
                 {{university.name}}
               </mat-option>
               <mat-option *ngFor="let faculty of country.faculties" [value]="faculty"
+                          (onSelectionChange)="queryHomeCountry = country;queryHomeFaculty = faculty; filterCoursesByHomeFaculty()"
                           (click)="queryHomeCountry = country;queryHomeFaculty = faculty; filterCoursesByHomeFaculty()">
                 {{faculty.name}}
               </mat-option>
@@ -24,21 +27,25 @@
         <div *ngIf="(queryHomeUniversity || queryHomeFaculty) && filteredHomeCourses.length > 0 ">
           <mat-form-field *ngIf="listCourses.length == 0" class="input" style="width:80%">
             <input placeholder="Add course to compare list" matInput [formControl]="homeCoursesControl"
-                   [matAutocomplete]="home_courses_auto" [(ngModel)]="queryHomeCourse" (ngModelChange)="addCourseToList(queryHomeCourse)"
-                   required >
+                   [matAutocomplete]="home_courses_auto" [(ngModel)]="queryHomeCourse"
+                   required>
 
             <mat-autocomplete #home_courses_auto="matAutocomplete" [displayWith]="displayFn">
-              <mat-option *ngFor="let course of filteredHomeCoursesAutocomplete | async" [value]="course">
+              <mat-option
+                (onSelectionChange)="addCourseToList(course)"
+                (click)="addCourseToList(course)"
+                *ngFor="let course of filteredHomeCoursesAutocomplete | async" [value]="course">
                 {{ course.name }}
               </mat-option>
             </mat-autocomplete>
 
           </mat-form-field>
 
-                      <mat-form-field *ngIf="listCourses.length > 0" class="input" style="width:80%">
+          <mat-form-field *ngIf="listCourses.length > 0" class="input" style="width:80%">
             <input placeholder="Add course to compare list" matInput [formControl]="homeCoursesControl"
-                   [matAutocomplete]="home_courses_auto" [(ngModel)]="queryHomeCourse" (ngModelChange)="addCourseToList(queryHomeCourse)"
-                    >
+                   [matAutocomplete]="home_courses_auto" [(ngModel)]="queryHomeCourse"
+                   (ngModelChange)="addCourseToList(queryHomeCourse)"
+            >
 
             <mat-autocomplete #home_courses_auto="matAutocomplete" [displayWith]="displayFn">
               <mat-option *ngFor="let course of filteredHomeCoursesAutocomplete | async" [value]="course">
@@ -46,11 +53,12 @@
               </mat-option>
             </mat-autocomplete>
           </mat-form-field>
-          <i style="color: darkgrey;" *ngIf="this.listCourses.length >= 5">Maximal number of courses reached(5), to compare other courses remove existing from list.</i>
+          <i style="color: darkgrey;" *ngIf="this.listCourses.length >= 5">Maximal number of courses reached(5), to
+            compare other courses remove existing from list.</i>
           <mat-chip-list>
             <mat-chip *ngFor="let course of listCourses" style="height: 30px;">
               {{course.name}}
-              <button mat-icon-button (click)="listCourses.splice(listCourses.indexOf(course),1)">
+              <button mat-icon-button (click)="removeCourseFromList(course)">
                 <mat-icon matTooltip="Remove from comparison list">clear</mat-icon>
               </button>
             </mat-chip>
@@ -58,28 +66,30 @@
         </div>
       </div>
 
-            <div *ngIf="(queryHomeUniversity || queryHomeFaculty) &&  filteredHomeCourses.length == 0 && !loadingCourses">
-            <p>Sorry, we currently don't have any course for this faculty in our database.</p>
-        </div>
+      <div *ngIf="(queryHomeUniversity || queryHomeFaculty) &&  filteredHomeCourses.length == 0 && !loadingCourses">
+        <p>Sorry, we currently don't have any course for this faculty in our database.</p>
+      </div>
       <div class="forms-group" style="margin-top: 10px;">
         <mat-form-field class="input">
           <mat-select required placeholder="Compare with courses from" [formControl]="pokemonControl">
             <mat-optgroup *ngFor="let country of countries" [label]="country.name">
               <mat-option [value]="country"
+                          (onSelectionChange)="queryCountry = country; queryUniversity = null; queryFaculty= null;"
                           (click)="queryCountry = country; queryUniversity = null; queryFaculty= null;"
               >-- All in {{country.name}} --
               </mat-option>
               <mat-option *ngFor="let university of country.universities" [value]="university"
-                          (click)="queryUniversity = university; queryFaculty= null;"
+                          (onSelectionChange)="queryUniversity = university; queryFaculty= null;"
                           (click)="queryUniversity = university; queryFaculty= null;">
                 {{university.name}}
               </mat-option>
               <mat-option *ngFor="let faculty of country.faculties" [value]="faculty"
+                          (onSelectionChange)="queryFaculty = faculty; queryUniversity = null;"
                           (click)="queryFaculty = faculty; queryUniversity = null;">
                 {{faculty.name}}
               </mat-option>
             </mat-optgroup>
-            </mat-select>
+          </mat-select>
         </mat-form-field>
       </div>
 
