--- a/frontend/csyllabus/src/app/components/course/course.component.html
+++ b/frontend/csyllabus/src/app/components/course/course.component.html
@@ -1,79 +1,31 @@
-<div *ngIf="course"
-     style="text-align:left; background:linear-gradient(to right, rgb(116,153,227), rgb(47, 75, 131)); padding: 25px 0 10px 0; "
->
 
-  <div class="container" style=" padding-top:10px;padding-left:50px; vertical-align:top">
-    <p style="display:inline; font-size:25px; font-weight:bold; color: white;">{{course.name}}</p>
-  </div>
 
-</div>
-<div class="container">
-  <div class="col-md-12">
 
-    <p *ngIf="!course" style="text-align:center;"></p>
 
-    <div id="search-component-spinner" *ngIf="false">
-      <mat-spinner style="margin-left: auto;
-margin-right: auto; "></mat-spinner>
-    </div>
-    <div *ngIf="course">
-      <div>
+    <section class="page-section clearfix">
+      <div class="container">
+        <div class="intro">
+          <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="../../../images/fer.jpg" alt="">
+          <div class="intro-text left-0 text-center bg-faded p-5 rounded">
+            <h2 class="section-heading mb-4">
+              <span class="section-heading-upper">Course information</span>
+              <span class="section-heading-lower">{{ course.name }}</span>
+            </h2>
 
-        <!--
-                <img class="logoU" src="http://www.clker.com/cliparts/7/4/b/6/13373556381963102819fer.logo_.png" height="80">-->
-        <div class="col-md-12">
-
-          <div style="vertical-align:top; text-align:left; line-height: 1.5;" class="col-md-8">
-            {{course.description}}
-            <br><br>
-
+{{ course.faculty }}
+Semesters: {{ course.semester }}
+Credits: {{ course.ects }}
+            <p class="mb-3">{{ course.description }}
+            </p>
+            <div class="intro-button mx-auto">
+              <a class="btn btn-primary btn-xl" href="#">Visit Us Today!</a>
+            </div>
           </div>
-
-          <div style="text-align:right; font-size:16px; padding-top:40px; padding-left:40px" class="col-md-4">
-
-            <table style="border:0px" align=center>
-              <tr>
-                <td>{{course.university}}</td>
-              </tr>
-              <tr>
-                <td style="height:10px"></td>
-              </tr>
-              <tr>
-                <td>{{course.faculty}}</td>
-              </tr>
-              <tr>
-                <td style="height:10px"></td>
-              </tr>
-              <tr>
-                <td style="height:10px"></td>
-              </tr>
-              <tr>
-                <td>Semesters: {{course.semester}}</td>
-              </tr>
-              <tr>
-                <td style="height:10px"></td>
-              </tr>
-              <tr>
-                <td>Credits: {{course.ects}}</td>
-              </tr>
-              <tr>
-                <td style="height:10px"></td>
-              </tr>
-
-            </table>
-
-          </div>
-
         </div>
-        <div class="col-md-12">
-          <app-social [courseId]=course.id [title]=course.name [university]=course.university [description]=course.description> </app-social>
-        </div>
-
       </div>
+    </section>
 
-    </div>
-  </div>
-</div>
-
-
+<div class="col-lg-5">
+    <app-social [courseId]=course.id [title]=course.name [university]=course.university
+                [description]=course.description></app-social>
 
