--- a/frontend/csyllabus/src/app/core/result-cards/result-cards.component.css
+++ b/frontend/csyllabus/src/app/core/result-cards/result-cards.component.css
@@ -28,15 +28,20 @@
   text-overflow: ellipsis;
   max-height: 200px;
   overflow: hidden;
+  padding-top:20px;
+  text-align:justify
 }
 
 .cours-result-card-title {
   /*height: 75px;*/
-  padding-bottom: 15px;
+  margin-top:10px;
   overflow: hidden;
   text-overflow: ellipsis;
-  font-size: 18px;
+  font-size: 20px;
   font-weight: bold;
+  margin-bottom: 0px;
+  color: white;
+  padding-bottom: 2px;
 }
 
 @-webkit-keyframes pulsate {
@@ -55,12 +60,36 @@
 
 .example-card {
   transition: all .2s ease-in-out;
+  //color:white;
 }
 
 .example-card:hover {
   transform: scale(1.1);
 }
 
+.bck-color-blue {
+  background-color:#9999f9
+}
+
+.bck-color-green {
+  background-color:#36a236
+}
+
+.bck-color-red {
+  background-color:#ff7575
+}
+
+.bck-color-orange {
+  background-color:#f3b94d
+}
+
+.bck-color-grey {
+  background-color:#9e9d9d
+}
+
+.bck-color-purple {
+  background-color:#dc69c4
+}
 
 
 @media only screen and (min-width: 768px) {
@@ -71,10 +100,10 @@
 }
 
 .go-to-compare{
-  margin-top: -100px;
+
   margin-left: 90%;
   margin-bottom:0px;
-  color: #798fdd;
+  color: white;
 }
 
 .go-to-compare {
@@ -84,4 +113,12 @@
 .go-to-compare:hover {
   transform: scale(1.3);
   color: #394680;
+}
+
+.card-title-style {
+  margin-top:-25px;
+  text-align:left;
+  padding: 5px;
+  width: calc(100% + 64px);
+  margin-left: -32px;
 }
