--- a/frontend/csyllabus/src/app/core/result-cards/result-cards.component.html
+++ b/frontend/csyllabus/src/app/core/result-cards/result-cards.component.html
@@ -6,20 +6,26 @@
 
   <div *ngFor="let course of courses; let i = index" class="courseCard col-md-4" [hidden]="i >= 12*page">
     <mat-card style="cursor: pointer;" (click)="openDialog(course.id)" class="example-card">
-      <p class="go-to-compare">
-        <a href="www.google.com"><i title="Compare" class="fa fa-chevron-circle-right fa-2x"></i></a>
-      </p>
-      <mat-card-header>
-        <mat-card-title>
 
-          <p class="cours-result-card-title">{{ course.name }}</p>
+      <mat-card-header>
+        <mat-card-title class="card-title-style" [ngClass]="{'bck-color-blue':i%1==0, 'bck-color-red':i%2==0, 'bck-color-green':i%3==0, 'bck-color-orange':i%4==0, 'bck-color-grey':i%5==0, 'bck-color-purple':i%6==0}">
+
+<!--style="text-align:left; background-color:#448AFF; padding: 80px 0 10px 0; width: calc(100% + 64px); margin-left: -32px;"-->
+
+
+          <p class="go-to-compare">
+        <mat-icon>compare_arrows</mat-icon>
+      </p>
+
+          <p style="" class="cours-result-card-title">{{ course.name }}</p>
 
 
 
         </mat-card-title>
+
         <mat-card-subtitle>
           <!--<b *ngIf="course.rank"> Rank: {{course.rank * 100 | number : '1.2-2'}} </b> -->
-          <p class="cours-result-card-subtitle">
+          <p class="cours-result-card-subtitle" style="padding-top:20px; text-align:right">
             <span *ngIf="course.faculty">{{course.faculty}}, </span>
             <span *ngIf="course.university">{{course.university}}, </span>
             <span *ngIf="course.city">{{course.city}}, </span>
