--- a/frontend/admin/src/app/app.component.html
+++ b/frontend/admin/src/app/app.component.html
@@ -42,6 +42,10 @@
               <mat-icon style="margin-right: 32px">supervisor_account</mat-icon>
               <span style="position: absolute;line-height: 24px;">Users</span>
             </a>
+            <a *ngIf="isadmin" class="sidebar-link" [routerLink]="['universities']" [routerLinkActive]="['active']">
+              <mat-icon style="margin-right: 32px">account_balance</mat-icon>
+              <span style="position: absolute;line-height: 24px;">Universities</span>
+            </a>
             <div class="mdl-layout-spacer"></div>
             <!--<a class="sidebar-link" href="" style="position: absolute; bottom: 0;">
               <mat-icon style="margin-right: 32px">help_outline</mat-icon>
