--- a/frontend/csyllabus/src/app/core/course-dialog/course-dialog.component.html
+++ b/frontend/csyllabus/src/app/core/course-dialog/course-dialog.component.html
@@ -15,7 +15,7 @@
 
       </div>
 
-      <!--<img class="logoU" src="http://www.clker.com/cliparts/7/4/b/6/13373556381963102819fer.logo_.png" height="80">-->
+      <img class="logoU" [src]="course.universityImg" (error)="setMainImgToDefault()" height="80">
       <div class="col-md-12">
 
         <div style="vertical-align:top; text-align:left; line-height: 1.5;" class="col-md-8">
