--- a/frontend/csyllabus/src/app/core/result-cards-comparator/result-cards-comparator.component.html
+++ b/frontend/csyllabus/src/app/core/result-cards-comparator/result-cards-comparator.component.html
@@ -4,11 +4,11 @@
       <div class="puls-rings"></div>
     </div>
 
-    <div *ngFor="let course of courses" class="col-md-12"
+    <div *ngFor="let course of courses; let i = index;" class="col-md-12"
          style="background-color:rgba(255, 255, 255, 0.5); margin-bottom:50px">
       <div class="col-md-6">
         <div *ngFor="let coursetest of course; let first = first;" >
-          <mat-card *ngIf="first" (click)="openDialog(coursetest.id)" class="example-card bck-color-purple" style="cursor:pointer">
+          <mat-card *ngIf="first" (click)="openDialog(coursetest.id)" class="example-card" [ngClass]="{'bck-color-blue':i%1==0, 'bck-color-red':i%2==0, 'bck-color-green':i%3==0, 'bck-color-orange':i%4==0, 'bck-color-grey':i%5==0, 'bck-color-purple':i%6==0}" style="cursor:pointer">
             <mat-card-title style="font-size:20px;text-align:left;color:white">
               {{coursetest.name}}
             </mat-card-title>
