--- a/frontend/csyllabus/src/app/core/core.component.html
+++ b/frontend/csyllabus/src/app/core/core.component.html
@@ -33,7 +33,7 @@
   </div>
   <div class="col-md-4">
     <div id="chooser-explorer-card" [ngClass]="{'chooser-card-active': chooserSelectedExplorer }"
-         (click)="chooserSelect('explorer')">
+         (click)="chooserSelect('explorer')" [routerLink]="[{ outlets: { sub: ['explorer'] } }]">
       <div class="chooser-card-text">
         <p class="chooser-card-title">EXPLORE</p>
         <p class="chooser-card-subtitle">courses from a university</p>
@@ -42,7 +42,7 @@
   </div>
   <div class="col-md-4">
     <div id="chooser-comparator-card" [ngClass]="{'chooser-card-active': chooserSelectedComparator }"
-         (click)="chooserSelect('comparator')">
+         (click)="chooserSelect('comparator')" [routerLink]="[{ outlets: { sub: ['comparator'] } }]">
       <div class="chooser-card-text">
         <p class="chooser-card-title">COMPARE</p>
         <p class="chooser-card-subtitle">courses with semantic indexing</p>
@@ -51,25 +51,27 @@
   </div>
   <div class="col-md-12">&nbsp;</div>
 </div>
-<div id="filters-container"
-     [ngClass]="{'filters-containter-comp': chooserSelectedComparator, 'filters-containter-exp': chooserSelectedExplorer}"
-     *ngIf="chooserSelectedExplorer || chooserSelectedComparator" style="position: relative;">
-  <img class="variable-background" *ngIf="backgroundImage && backgroundImage != ''" [src]="backgroundImage">
-  <div class="bg-container custom-scrollbar" align="center">
-    <div class="container">
-      <app-explorer (explorerResult)="fetchExplorerResult($event)"
+<div id="filters-container" *ngIf="chooserSelectedExplorer || chooserSelectedComparator" style="position: relative;">
+  <!--<img class="variable-background" *ngIf="backgroundImage && backgroundImage != ''" [src]="backgroundImage">
+  -->
+
+
+      <router-outlet name="sub" ></router-outlet>
+      <!--<app-explorer (explorerResult)="fetchExplorerResult($event)"
                     (backgroundImage)="changeBackgroundImage($event)"
                     *ngIf="chooserSelectedExplorer"></app-explorer>
       <app-comparator (comparatorResult)="fetchComparatorResult($event)"
                       (backgroundImage)="changeBackgroundImage($event)"
                       *ngIf="chooserSelectedComparator"
-      ></app-comparator>
+      ></app-comparator>-->
     </div>
-  </div>
-</div>
+  <!--</div>
+</div>-->
+    <!--
 <div id="explorer-result-component">
   <app-result-cards *ngIf="chooserSelectedExplorer" [courses]="explorerResult"></app-result-cards>
   <app-result-cards-comparator *ngIf="chooserSelectedComparator"
                                [courses]="comparatorResult" ></app-result-cards-comparator>
 
 </div>
+-->
