--- a/frontend/csyllabus/src/app/core/comparator/comparator.component.css
+++ b/frontend/csyllabus/src/app/core/comparator/comparator.component.css
@@ -48,15 +48,53 @@
 }
 
 .custom-card-title{
-  font-size: 24px;
+  font-size: 20px;
   margin: 0;
   color: white;
-  padding: 6px 30px;
+  padding-left:30px;
   position:relative;
   text-align: left;
-
+  height:56px;
+  line-height:56px;
   background-color: rgba(85, 118, 184, 0.9);
   width: 100%;
+}
+
+.toggleComparator{
+  float:right;
+  height:56px;
+  line-height:56px;
+  padding:20px 20px 20px 20px;
+  background-color:#adadf561;
+}
+
+.triangle{
+  border-right: 30px solid #adadf561;
+  display: inline-block;
+  height: 56px;border-top: 56px solid transparent;
+  background-color: white;
+  float: right;
+  background: transparent;
+}
+
+@media all and (max-width: 1000px) {
+  .custom-card-title{
+    font-size: 14px;
+    margin-bottom:54px;
+  }
+  .toggleComparator{
+    float:none;
+    height:56px;
+    line-height:56px;
+    margin-top:-1px;
+    margin-left: -30px;
+    width:calc(100% + 30px);
+    background-color: rgba(85, 118, 184, 0.9);
+  }
+  .triangle{
+    display:none;
+  }
+
 }
 
 .forms-group {
