--- a/frontend/csyllabus/src/app/core/explorer/explorer.component.css
+++ b/frontend/csyllabus/src/app/core/explorer/explorer.component.css
@@ -46,14 +46,16 @@
 }
 
 .custom-card-title {
-  font-size: 22px;
+  font-size: 20px;
   float: left;
   margin-bottom: 0;
   color: white;
-  padding: 6px 30px;
+  padding-left:30px;
   position: relative;
   text-align: left;
   z-index: 1;
+  height: 56px;
+  line-height:56px;
   background-color: rgba(85, 118, 184, 0.9);
   width: 100%;
 }
