--- a/frontend/csyllabus/src/app/core/result-cards/result-cards.component.html
+++ b/frontend/csyllabus/src/app/core/result-cards/result-cards.component.html
@@ -3,7 +3,7 @@
        class="puls-rings-outer">
     <div class="puls-rings"></div>
   </div>
-  <mat-form-field style="float:right; margin-top:-80px">
+  <mat-form-field class="orderingExplorerResults">
   <mat-select placeholder="Order by" [(ngModel)]="orderBy" (ngModelChange)="orderResults()">
     <mat-option selected="true" value="nameAsc">
       Name - Ascending
@@ -14,7 +14,7 @@
     <mat-option value="rankAsc">
       Rank - Ascending
     </mat-option>
-    <mat-option value="RankDesc">
+    <mat-option value="rankDesc">
       Rank - Descending
     </mat-option>
   </mat-select>
@@ -22,6 +22,7 @@
 
 
   <div *ngFor="let course of courses; let i = index" class="courseCard col-md-4" [hidden]="i >= 12*page">
+
     <mat-card style="cursor: pointer;" (click)="openDialog(course.id)" class="example-card" [ngClass]="{'bck-color-blue':i%1==0, 'bck-color-red':i%2==0, 'bck-color-green':i%3==0, 'bck-color-orange':i%4==0, 'bck-color-grey':i%5==0, 'bck-color-purple':i%6==0}">
 
       <mat-card-header >
