--- a/frontend/csyllabus/src/styles.css
+++ b/frontend/csyllabus/src/styles.css
@@ -99,21 +99,21 @@ h2 {
 .custom-scrollbar::-webkit-scrollbar-track
 {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	border-radius: 10px;
-	background-color: #F5F5F5;
+	border-radius: 0px;
+	background-color: transparent;
 }
 
 .custom-scrollbar::-webkit-scrollbar
 {
-	width: 12px;
-	background-color: #F5F5F5;
+	width: 6px;
+	background-color: transparent;
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb
 {
-	border-radius: 10px;
+	border-radius: 0px;
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: rgba(63, 94, 251, 0.56);
+	background-color: rgba(68, 138, 255, 0.73);
 }
 
 
@@ -132,4 +132,11 @@ h2 {
     width: 100%;
     max-width: 100%;
   }
+  .mat-dialog-container {
+  padding: 0 !important;
+  max-width: 100vw !important;
+  max-width: 100vw !important;
 }
+}
+
+
