--- a/frontend/csyllabus/src/app/components/course/course.component.html
+++ b/frontend/csyllabus/src/app/components/course/course.component.html
@@ -1,40 +1,100 @@
-<div class="row" style="margin-top:70px; margin-left:10%; margin-right: 10%;">
-<div class="card col-lg-8">
-    <div class="card-body">
-        <h3 class="card-title">{{ course.name }}</h3>
-        <br/>
-        <p class="card-text" style="text-align: justify;"> {{ course.description }}</p>
+
+<div class="col-md-12" style="background-color:#eaeaea; padding:0; height:100%">
+  <div class="col-md-12" style="background-color:#5ab95a; height:200px; ">
+<div style="width:90%; margin-right: auto; margin-left: auto; margin-top:50px; background:grey">
+<div class="col-md-12" style="padding-bottom:0px">
+
+<div class="col-md-7" style="padding:0;border:2px solid grey; margin-right:10px; background-color:white">
+    <div style="text-align:left; background-color:#9999f9;min-height:56px;line-height:56px">
+
+      <div style="display:inline-block; padding-left:50px; ">
+        <p style="display:inline; font-size:22px; font-weight:bold; color: white;">{{course.name}}</p>
+      </div>
+
     </div>
-</div>
 
-<div class="card col-lg-4" id="course-details">
-    <div class="card-body" style="text-align: justify">
+        <div style="vertical-align:top; text-align:justify; line-height: 1.5; padding:30px;">
+          {{course.description}}
 
-        <p><b>Faculty:</b> {{ course.faculty }}</p>
-       <p><b>Semesters:</b> {{ course.semester }} </p>
-<p><b>Credits: </b>{{ course.ects }}</p>
+        </div>
+
+
+
     </div>
-</div>
-</div>
 
-<div class="row" style=" margin-left:10%; margin-right: 10%;">
 
-<div class="card col-lg-4">
-    <div class="card-body">
-        <h3 class="card-title">{{ course.faculty }}</h3>
-        <br/>
-        <p class="card-text" style="text-align: justify;"> great faculty</p>
+  <div class="col-md-4" style="padding:0px;border:2px solid grey;background-color:white">
+
+    <div class="col-md-12" style="padding:0px;text-align:left; background-color:#ff7575; height:56px; line-height:56px">
+
+      <!--<div *ngIf="course.faculty" style="display:inline-block; padding-top:10px;padding-left:20px; vertical-align:top">
+        <p style="display:inline; font-size:25px; font-weight:bold; color: white;">{{course.faculty}}</p>
+      </div>-->
+
+
+      <div style="display:inline-block; padding-top:10px;padding-left:20px; vertical-align:top">
+        <p style="display:inline; font-size:20px;color: white;">{{course.university}}</p>
+      </div>
+
+
+
     </div>
-</div>
+
+    <div>
+
+    <mat-list role="list">
+  <mat-list-item style="text-align:left" *ngIf="course.faculty" role="listitem"><mat-icon>university</mat-icon> {{course.faculty}}</mat-list-item>
+  <mat-list-item *ngIf="course.study_lvl" role="listitem"><mat-icon>university</mat-icon> Study level: {{course.study_lvl}}</mat-list-item>
+  <mat-list-item *ngIf="course.semester" role="listitem"><mat-icon>university</mat-icon> Semester: {{course.semester}}</mat-list-item>
+  <mat-list-item *ngIf="course.ects" role="listitem"> <mat-icon>university</mat-icon> ECTS:  {{course.ects}}</mat-list-item>
+  <mat-list-item *ngIf="course.english_level" role="listitem">  English level: {{course.english_level}}</mat-list-item>
+</mat-list>
 
 
-<div class="card col-lg-8">
-    <div class="card-body">
-
-    <app-social [courseId]=course.id [title]=course.name [university]=course.university
-                [description]=course.description></app-social>
     </div>
-</div>
+
+  </div>
+
 </div>
 
+  <div class="col-md-12">
+    <div class="col-md-4" style="padding:0px;border:2px solid grey; margin-right:10px; background-color:white">
 
+    <div class="col-md-12" style="padding:0px;text-align:left; background-color:#f3b94d;">
+
+
+      <div style="display:inline-block; padding-top:10px;padding-left:20px; vertical-align:top;height:56px; line-height:56px">
+        <p style="display:inline; font-size:20px; color: white;">Similar courses</p>
+      </div>
+
+
+
+    </div>
+
+    <div>
+
+    <mat-list role="list">
+  <mat-list-item style="margin-top:10px; margin-bottom:10px" *ngFor="let similar of similarCourses" >
+
+    <p style="text-align:left">{{similar.name}}
+      <span style="color:grey;"> {{similar.university}}</span></p>
+  </mat-list-item>
+
+  </mat-list>
+
+
+    </div>
+
+  </div>
+
+    <div class="col-md-7" style="padding:0;border:2px solid grey;background-color:white">
+
+      <app-social [courseId]=course.id></app-social>
+    </div>
+
+
+  </div>
+</div>
+
+</div>
+</div>
