--- a/frontend/csyllabus/src/app/components/social/social.component.html
+++ b/frontend/csyllabus/src/app/components/social/social.component.html
@@ -1,19 +1,6 @@
-<div class="sharepart col-md-6">
-  <h3>Share this Syllabus with your friends:</h3>
-  <share-buttons [defaultStyle]
-                 [pinterest]="false"
-                 [stumbleUpOn]="false"
-                 [reddit]="false"
-                 [tumblr]="false"
-                 [url]=url [title]=title [description]=description
-  >
+<div class="col-md-12">
 
-  </share-buttons>
-</div>
-<div class="col-md-6">
-
-</div>
-<div class="commentspart ">
+<div class="commentspart col-md-8" style="width:90%">
   <!-- The following is shown if the user is logged ing -->
   <div *ngIf="user">
     <div style="display: inline-block;">
@@ -21,33 +8,48 @@
     </div>
     <div style="display: inline-block;">
       <div class="card-block">
-        <h4 class="card-title">{{ user.name }}</h4>
+        <p class="card-title">{{ user.name }}</p>
         <p class="card-text">{{ user.email }}</p>
       </div>
         <button  (click)="signOut()">Sign out</button>
     </div>
-
   </div>
   <!-- The following is shown if the user is not logged ing -->
-
   <div *ngIf="!user">
-    <div class="card-block">
-      <h4 class="card-title">To comment please sign in</h4>
-      <p class="card-text">Sign in with</p>
-    </div>
-    <div class="card-block">
-      <button class="Googlebutton" (click)="signInWithGoogle()"></button>
-      <button class="Facebookbutton" (click)="signInWithFB()"></button>
-    </div>
+      <mat-icon title="Log in">user</mat-icon>
+      <button title="Log in" class="Googlebutton" (click)="signInWithGoogle()"></button>
+      <button title="Log in" class="Facebookbutton" (click)="signInWithFB()"></button>
+
   </div>
 
+  <div style="padding-top:100px">
 
+  <mat-form-field class="example-full-width">
+      <input matInput #message maxlength="256" placeholder="Message" [(ngModel)]="val">
+      <mat-hint align="end">{{message.value.length}} / 256</mat-hint>
+    </mat-form-field>
+    <button mat-icon-button (click)="newComment(user.name)">
+      <mat-icon>send</mat-icon>
+    </button>
 
-
+    </div>
 
 </div>
- <div *ngIf="user" class="col-md-12" style="text-align: left;">
-      <h3>Comment this Syllabus:</h3>
+
+
+<div class="sharepart col-md-2" title="Share" style="padding:0; width:10%">
+  <share-buttons [defaultStyle]
+                 [pinterest]="false"
+                 [stumbleUpOn]="false"
+                 [reddit]="false"
+                 [tumblr]="false"
+                 [url]=url [title]=title [description]=description
+  >
+  </share-buttons>
+</div>
+<!--*ngIf="user"
+ <div class="col-md-8" style="text-align: left; width:90%">
+
     <mat-form-field class="example-full-width">
       <input matInput #message maxlength="256" placeholder="Message" [(ngModel)]="val">
       <mat-hint align="end">{{message.value.length}} / 256</mat-hint>
@@ -56,13 +58,15 @@
       <mat-icon>send</mat-icon>
     </button>
 
+  </div>-->
+
+  <div class="commentscontainer col-md-12" *ngIf="comments" style="text-align: left;">
+      <mat-card *ngFor="let comment of comments; let i = index " [hidden]="i >= 12*page" style="border: 1px solid #a4a4a4; padding: 10px;
+  ">
+        <button mat-icon-button (click)="deleteComment(comment.id)" *ngIf="user && comment.author == user.name" style="float: right;">
+      <mat-icon>delete</mat-icon></button>
+        <p>{{comment.author}}: {{ comment.content }}</p>
+          <i>{{comment.modified | date}}</i>
+      </mat-card>
   </div>
-<div class="commentscontainer col-md-12" *ngIf="comments" style="text-align: left;">
-    <mat-card *ngFor="let comment of comments; let i = index " [hidden]="i >= 12*page" style="border: 1px solid #a4a4a4; padding: 10px;
-">
-      <button mat-icon-button (click)="deleteComment(comment.id)" *ngIf="user && comment.author == user.name" style="float: right;">
-    <mat-icon>delete</mat-icon></button>
-      <p>{{comment.author}}: {{ comment.content }}</p>
-        <i>{{comment.modified | date}}</i>
-    </mat-card>
-  </div>
+</div>
